@@ -1,3 +1,10 @@
+1999-04-29  Jim Kingdon  <http://www.cyclic.com>
+
+	* run.c (piped_child): Make the error messages more verbose.
+	(close_on_exec): Reindent.
+	* sanity.sh (devcom3): Several errors are possible in devcom3-9a.
+	Adjust for change to piped_child error message.
+
 1999-04-28  Jim Kingdon  <http://www.cyclic.com>
 
 	* sanity.sh (devcom3): Add some tests of the CVS/Notify file and
